# insureai

./: .env.example  .gitignore  CLAUDE.md  Makefile  OPTIMIZATION_PROPOSAL.md  README.md  collect.py  collect_research.py  data.baseline.json  data.json  fetch_today_news.py  inbox.example.json  index.html  prerender.py  pyproject.toml  research.json  rss.xml  run_collect.py  sitemap.xml  test_collection.py  test_demo.py  test_search.py  test_skill.py  wrangler.jsonc
.compound-engineering/: config.local.example.yaml
.github/workflows/: daily-collect.yml  daily-pipeline.yml  weekly-research.yml
archive/main/: CONCEPTS.md  README.md  requirements.txt
css/: style.css
data/: config.json
data/quality/: 2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json  latest.json
data/rss/: curated-en.xml  curated-zh.xml
data/summaries/: 2026-06-24-en.md  2026-06-24-zh.md  2026-06-24.json  2026-06-25-en.md  2026-06-25-zh.md  2026-06-25.json  2026-06-26-zh.md  2026-06-26.json  2026-06-27-en.md  2026-06-27-zh.md  2026-06-27.json  2026-06-28-en.md  2026-06-28-zh.md  (+20 more)
docs/: data.json  index.html
js/: app.js
scripts/: evaluate_balance.py  gen_og_image.py  quality_score.py  start.sh
src/: __init__.py  config.py  main.py  models.py  skill.py  translation.py
tests/: test_collect.py  test_dedup.py  test_research_topics.py
(+53 files in other folders)
