[project]
name = "insure-scope"
version = "1.0.0"
description = "AI-Driven Insurance Information Aggregation System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "openai>=1.30",
    "anthropic>=0.40",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
insure-scope = "src.main:cli"
insure-scope-api = "src.output.api_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src"]
